# macports

./: .gitignore  PortIndex  README
_resources/port1.0/fetch/: mirror_sites.tcl
_resources/port1.0/group/: python24-1.0.tcl  python25-1.0.tcl  python30-1.0.tcl  ruby-1.0.tcl  xcode-1.0.tcl
aqua/fltk/: Portfile
aqua/fltk/files/: patch-fluid-CMakeList.txt.diff
graphics/gdchart/: Portfile
graphics/nifticlib/: Portfile
graphics/vtk-cvs/: Portfile
graphics/xmedcon/: Portfile
math/atlas/: Portfile
math/atlas/files/: patch-CONFIG-src-backend-archinf_x86.c.diff
math/cprob/: Portfile
math/cprob/files/: CMakeLists.txt
math/lp_solve/: Portfile
math/newmat/: Portfile
math/newran/: Portfile
python/hellanzb/: Portfile
python/py25-hcluster/: Portfile
python/py25-pymvpa/: Portfile
python/py25-pymvpa/files/: patch-mvpa.diff
python/py25-pynifti/: Portfile
python/py25-pynifti/files/: patch-setup-py.diff
python/py25-pywavelets/: Portfile
python/py25-shogun/: Portfile
python/py25-shogun/files/: patch-src  patch-src-lib-lapack.cpp
python/py26-bpython/: Portfile
python/py26-parsing/: Portfile
science/InsightToolkit/: Portfile
science/InsightToolkitCVS/: Portfile
science/fsl/: Portfile
science/fsl/files/: patch-bin-fslview.diff
science/gdcm/: Portfile
science/itkgray/: Portfile
science/itkgray/files/: patch-SNAP-UserInterface-SliceWindow-PolygonScanConvert.cxx.diff
science/itksnap/: Portfile
science/shogun/: Portfile
science/uclatools/: Portfile  portfile.patch
x11/tix/: Portfile
